<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph"
            app:startDestination="@id/notesFragment">

    <fragment android:id="@+id/notesFragment" android:name="com.training.notes.ui.list.NotesFragment"
              android:label="@string/notes_title" tools:layout="@layout/notes_fragment">
        <action android:id="@+id/action_notesFragment_to_addNoteFragment" app:destination="@id/addNoteFragment"
                app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
        <action android:id="@+id/action_notesFragment_to_noteDetailFragment" app:destination="@id/noteDetailFragment"
                app:enterAnim="@anim/nav_default_enter_anim" app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
    </fragment>
    <fragment android:id="@+id/addNoteFragment"
              android:name="com.training.notes.ui.add.AddNoteFragment"
              android:label="@string/add_note_title"
              tools:layout="@layout/add_note_fragment"/>
    <fragment android:id="@+id/noteDetailFragment" android:name="com.training.notes.ui.detail.NoteDetailFragment"
              android:label="@string/note_detail_title" tools:layout="@layout/note_detail_fragment"/>
</navigation>